--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -4,10 +4,8 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
   gap: 20px; 
 }
-
-
 .ProjectImage {
-  background-color: #f0f0f0; 
+  background-color: #d4af37; 
   padding: 20px; 
 }
 
