--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -6,31 +6,26 @@
   gap: 20px; 
 }
 
-
+.exdiv{
+  text-align: center;
+  background-color: #d4af37;
+}
 .experience {
-  background-color: #f0f0f0; 
+  background-color: #d4af37; 
   padding: 20px; 
   max-width: 300px; 
 }
-
-
 .Front {
   font-size: 20px; 
   margin-top: 0; 
   margin-bottom: 10px; 
 }
-
-
 .Front span {
   font-weight: bold; 
 }
-
-
 .title {
   font-weight: bold; 
 }
-
-
 .experience p {
   font-size: 16px; 
   margin: 0; 
