--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -3,28 +3,20 @@
   display: grid; 
   gap: 20px; 
 }
-
-
 .SkillWri {
-  background-color: #f0f0f0; 
+  background-color: #d4af37; 
   padding: 20px; 
   text-align: center; 
 }
-
-
 .SkillWri h2 {
   font-size: 20px; 
   margin-top: 10px; 
   margin-bottom: 5px; 
 }
-
-
 .SkillWri p {
   font-size: 16px; 
   margin: 0; 
 }
-
-
 .SkillWri img {
   max-width: 155px; 
   height: 155px; 
