--- a/src/components/about.css
+++ b/src/components/about.css
@@ -15,7 +15,7 @@ p {
   justify-content: center;
   height: 100vh;
   color: #1F51FF;
-  background-color: black;
+  background-color: red;
 }
 
 .AboutPage {
