--- a/src/components/Academics.css
+++ b/src/components/Academics.css
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   margin-bottom: 30px;
-  background: linear-gradient(to right, black, #d4af37);
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -34,6 +33,6 @@
 }
 
 .acContainer:hover {
-  background: linear-gradient(to right, #d4af37, black);
+  background: linear-gradient(to right, #ff9933, white);
   transform: scale(1.02);
 }
