--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,79 +1,41 @@
-
-body,
-h1,
-h2,
-p {
-  margin: 0;
-  padding: 0;
-}
-
-
-.portfolio-container {
+.portfolioContainer{
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  color: #1F51FF;
-  background-color: red;
+  background-color: #f9f9f9;
 }
-
-.AboutPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  color: white;
+.aboutme{
+  padding-top: 150px;
+  padding: 100px;
+  flex-basis: 50%;
 }
-
-.AboutPage img {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin-bottom: 1rem;
+.image{
+  flex-basis: 50%;
 }
-
-.AboutPage h2 {
-  font-size: 2rem;
+.button {
+  display: inline-block;
+  padding: 8px 16px;
+  font-size: 14px;
   font-weight: bold;
-  margin-bottom: 0.5rem;
+  text-transform: uppercase;
+  border-radius: 4px;
+  background-color: #ff9933;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
-.AboutPage p {
-  font-size: 1rem;
-  margin-bottom: 0.25rem;
+.button::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  transition: left 0.3s;
 }
 
-.AboutPage span {
-  font-weight: bold;
-}
-
-.AboutPage a {
-  color: #007bff;
-  text-decoration: none;
-  transition: color 0.3s ease-in-out;
-}
-
-.AboutPage a:hover {
-  color: #0056b3;
-}
-
-.AboutPage .about {
-  max-width: 400px;
-  text-align: center;
-  margin-top: 1rem;
-}
-
-.contact,
-.email,
-.linkedin,
-.github {
-  display: flex;
-  align-items: center;
-}
-.contact i,
-.email i,
-.linkedin i,
-.github i {
-  margin-right: 0.5rem;
+.button:hover::after {
+  left: 0;
 }
